--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat en tiempo real</title>
+    <style>
+        /* Estilos básicos */
+        body {
+            font-family: Arial, sans-serif;
+        }
+        #chat-container {
+            display: none;
+            margin-top: 20px;
+        }
+        #name-container {
+            text-align: center;
+            margin-top: 50px;
+        }
+        #message-box {
+            width: 100%;
+            height: 50px;
+            font-size: 16px;
+        }
+        .message {
+            margin-bottom: 10px;
+        }
+        .user-name {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h2>Chat en tiempo real</h2>
-    <ul id="mensajes"></ul>
-    <input id="mensaje" autocomplete="off" /><button onclick="enviarMensaje()">Enviar</button>
+
+    <!-- Contenedor para pedir el nombre -->
+    <div id="name-container">
+        <h2>Bienvenido, por favor ingresa tu nombre:</h2>
+        <input type="text" id="username" placeholder="Tu nombre" />
+        <button id="enter-btn">Entrar</button>
+    </div>
+
+    <!-- Contenedor del chat -->
+    <div id="chat-container">
+        <h3>Chat en tiempo real</h3>
+        <div id="messages"></div>
+        <textarea id="message-box" placeholder="Escribe tu mensaje..."></textarea>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
+        let username = "";
 
-        function enviarMensaje() {
-            const input = document.getElementById("mensaje");
-            socket.emit("mensaje", input.value);
-            input.value = "";
-        }
+        // Mostrar el chat y ocultar el formulario de nombre
+        document.getElementById('enter-btn').addEventListener('click', () => {
+            username = document.getElementById('username').value;
+            if (username) {
+                document.getElementById('name-container').style.display = 'none';
+                document.getElementById('chat-container').style.display = 'block';
+                socket.emit('user-joined', username);
+            }
+        });
 
-        socket.on("mensaje", (msg) => {
-            const li = document.createElement("li");
-            li.textContent = msg;
-            document.getElementById("mensajes").appendChild(li);
+        // Enviar mensaje al servidor cuando se presiona Enter
+        document.getElementById('message-box').addEventListener('keydown', (e) => {
+            if (e.key === 'Enter' && !e.shiftKey) {
+                e.preventDefault();
+                const message = e.target.value;
+                if (message.trim()) {
+                    socket.emit('chat-message', { username, message });
+                    e.target.value = '';
+                }
+            }
+        });
+
+        // Recibir y mostrar mensajes en el chat
+        socket.on('chat-message', (data) => {
+            const messagesDiv = document.getElementById('messages');
+            const messageElement = document.createElement('div');
+            messageElement.classList.add('message');
+            messageElement.innerHTML = `<span class="user-name" style="color: ${data.color};">${data.username}:</span> ${data.message}`;
+            messagesDiv.appendChild(messageElement);
+            messagesDiv.scrollTop = messagesDiv.scrollHeight;
         });
     </script>
+
 </body>
 </html>
+
