--- a/public/index.html
+++ b/public/index.html
@@ -4,30 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat en tiempo real</title>
-    <style>
-        /* Estilos básicos */
+     <style>
+        /* Estilo general */
         body {
             font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
+
+        /* Contenedor del chat */
         #chat-container {
-            display: none;
-            margin-top: 20px;
+            width: 60%;
+            height: 400px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            background-color: white;
+            overflow-y: auto;
         }
-        #name-container {
-            text-align: center;
-            margin-top: 50px;
-        }
-        #message-box {
-            width: 100%;
-            height: 50px;
-            font-size: 16px;
-        }
+
+        /* Estilo para los mensajes */
         .message {
-            margin-bottom: 10px;
+            padding: 5px;
+            border-bottom: 1px solid #e0e0e0;
         }
+
         .user-name {
             font-weight: bold;
+            margin-right: 5px;
         }
+
+        /* Estilo para la caja de entrada */
+        textarea {
+            width: 100%;
+            height: 50px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-top: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+
+        /* Estilo para la entrada de nombre */
+        #name-container {
+            text-align: center;
+        }
+
+        #name-container input {
+            padding: 10px;
+            font-size: 18px;
+            width: 60%;
+            margin-bottom: 10px;
+        }
+
+        #enter-btn {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        #enter-btn:hover {
+            background-color: #0056b3;
+        } 
     </style>
 </head>
 <body>
